--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body id="nowshow">
     <header align=center>
-        <img src="images/logo.jpeg" alt="my logo" class="icon">
+        <img src="images/logo.jpg" alt="my logo" class="icon">
         <h1>Don't Strave Together</h1>
     </header>
     
