--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <title>Home</title>
 </head>
 
-<body id="nowshow">
-    <header align=center>
+<body id="index">
+    <header>
         <img src="images/logo.jpg" alt="my logo" class="icon">
         <h1>Don't Strave Together</h1>
     </header>
