--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
 
 <body id="index">
     <header>
-        <img src="images/logo.jpg" alt="my logo" class="icon">
-        <h1>Don't Strave Together</h1>
+        <table>
+            <tr>
+            <td><img src="images/logo.jpg" alt="my logo" class="icon"></td>
+            <td><h1>Don't Strave Together</h1></td>
+            </tr>
+        </table>
     </header>
     
     
