--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         var cinemas=getCinemas();
         var recipe=getRecipe();
     </script>
+    <script>
+
+    </script>
     <style>
         p{
             width:400px;
@@ -63,11 +66,40 @@
 <br>
 
 <main>
-    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
+
     <div align="center">
+        <ul id="tick">
+            <li>
+                <a href="#">蔬菜類</a>
+                <!-- 蔬果類 -->
+                <ul>
+                    <li><input type="checkbox" name="vegetable" value="1"></li>
+
+
+                </ul>
+
+
+
+
+
+
+
+            </li>
+
+
+
+
+
+        </ul>
+
+
+
+
+
         <span>
             <label for="select">Select Cinema:</label>
-            <select id="selcinema" onchange="changemovie()">
+            <select id="selcinema" onchange="changerecipe()">
                 <script type="text/javascript">
                     cinemalist();
                 </script>
@@ -77,10 +109,12 @@
         <br><br>
         <span id=down>
             <script type="text/javascript">
-                changemovie();
+                changerecipe();
             </script>
         </span>
+
     </div>
+
     <br>
     <br>
     <br>
