--- a/index.html
+++ b/index.html
@@ -39,7 +39,27 @@
 
     <main>
         <div align="center">
-            
+            <span>
+                <table id="t">
+                    <tr>
+                        <th>名稱</th>
+                        <th onclick="change(0)">生命值</th>
+                        <th onclick="change(1)">饑餓值</th>
+                        <th onclick="change(2)">理智值</th>
+                        <th onclick="change(3)">烹飪時長</th>
+                        <th onclick="change(4)">保質期</th>
+                        <th>介紹</th>
+                    </tr>
+                    
+                </table>
+            </span>
+
+            <span>
+
+                <script type="text/javascript">
+                    printHungry();
+                </script>
+            </span>
         </div>
         <br>
         <br>
