--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 have_food[i].push([]);
             }
         }
+
     </script>
     <style>
         button{
@@ -66,30 +67,14 @@
                 <script type="text/javascript">
                     print_type();
                 </script>
-                <br>
-                <span id="蔬菜" class="hide">
-                    <label><input id="蔬菜all" name="sel_" type="checkbox" onchange='sel_all("蔬菜")'>"all蔬菜"</label>
-                    <label><input id="紅蘑菇" name="蔬菜" type="checkbox" onchange='sel_food([0,0,0])'>紅蘑菇</label>
-                    <label><input id="綠蘑菇" name="蔬菜" type="checkbox" onchange='sel_food([0,0,1])'>綠蘑菇</label>
-
-                </span>
-                <span id="水果" class="hide">
-                    <label><input id="水果all" name="sel_" type="checkbox" onchange='sel_all("水果")'>"all水果"</label>
-                    <input id="水果1" name="水果" type="checkbox" onchange='sel_food("水果1")'>"水果1"
-                    <input id="水果2" name="水果" type="checkbox" onchange='sel_food("水果2")'>"水果2"
-                </span>
-                <span id="肉" class="hide" onchange='sel_food("肉")'>
-                    <label><input id="肉all" name="sel_" type="checkbox" onchange='sel_all("肉")'>"all肉"</label>
-                    <input id="肉1" name="肉" type="checkbox" value="3" onchange='sel_food("肉1")'>"肉1"
-                    <input id="肉2" name="肉" type="checkbox" value="3" onchange='sel_food("肉2")'>"肉2"
-                </span>
-                <br>
+                
+                <br><br>
                 <input type="checkbox" id="sel_all" onclick='sel_all("sel_")'>全選</button>
                 <button onclick='remove_all()'>remove</button>
                 <button onclick="print_food()">priint</button>
                 <br>
                 <span id="test">
-                    <script>
+                    <script type="text/javascript">
                         print_food();
                     </script>
                 </span>
