--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 </script>
                 
                 <br><br>
-                <input type="checkbox" id="sel_all" onclick='sel_all("sel_")'>全選</button>
+                <label><input type="checkbox" id="sel_all" onclick='sel_all("sel_")'>全選</label>
+                <label><input type="checkbox" id="require_all" onclick='not_re_all()'>顯示以該食材為主食材的食譜</label>
                 <button onclick='remove_all()'>重設</button>
                 <button id="sure" onclick='print_recipe(null)'>確定</button>
                 <!--<button onclick="print_food()">priint</button>
